# EfficastVRA

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  render.yaml  run.ps1
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  cli.py  composition.py  config.py  db.py  main.py  mcp_server.py  observability.py  rate_limit.py  security.py  security_events.py  security_http.py
backend/app/adapters/: __init__.py  efficast_api.py  efficast_port.py  synthetic.py
backend/app/agent/: __init__.py  confidence.py  eval.py  graph.py  trace.py
backend/app/api/: __init__.py  demo_routes.py  intake_routes.py  routes.py  (+1 more)
backend/tests/: conftest.py  helpers.py  test_agent_eval.py  test_agent_reasoning.py  test_architecture.py  test_calibration.py  test_certificate.py  test_comparable_conditions.py  test_decision.py  test_deploy_config.py  test_disposition.py  test_e2e_api.py  test_efficast_reconciliation.py  test_efficast_shadow.py  test_false_closure_risk.py  test_forecaster.py  test_freshness_at_closure.py  test_frontloop.py  test_governance.py  test_industry.py  test_intake.py  test_intake_mission.py  test_integration.py  test_knowledge.py  test_lot_at_risk.py  test_machine_agnostic.py  test_machine_profiles.py  test_maia_outbound.py  test_mcp.py  test_mission_qa.py  test_mission_spine.py  test_oee_restoration.py  test_ops.py  test_passport_twin.py  test_phase35_honesty.py  test_profile_reuse.py  test_provenance.py  test_rag.py  test_recovery_core.py  test_recovery_debt.py  (+19 more)
(+265 files in other folders)
