[project]
name = "verified-recovery-agent"
version = "0.1.0"
description = "Verified Recovery Agent — independent Efficast-aligned manufacturing AI prototype (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# PostgreSQL driver for the production-shaped Docker Compose path (SQLite needs nothing extra).
postgres = [
    "psycopg[binary]>=3.2",
]
# Optional hosted/local LLM reasoning. The deterministic provider carries the full demo,
# so these are NOT required to run or test the system.
reasoning = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
